--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -204,7 +204,7 @@
         @include responsive(500px) {
           width: 90%;
           font-size: 1.5rem;
-          text-align: justify;
+          text-align: start;
         }
       }
       .top_bottom {
