--- a/frontend/src/components/cards/bestselling.scss
+++ b/frontend/src/components/cards/bestselling.scss
@@ -1,4 +1,4 @@
-@import "../../gobalscss/global.scss";
+@import '../../gobalscss/global.scss';
 .card_container {
   @include flex(column, null, null, 10px);
   padding: 10px;
@@ -18,6 +18,7 @@
   .card_content {
     @include flex(column, null, null, 10px);
     .star_section {
+      @include flex(row, space-between, center, 10px);
       p {
         font-weight: 400;
         color: gray;
