--- a/frontend/src/components/cards/bestselling.scss
+++ b/frontend/src/components/cards/bestselling.scss
@@ -1,11 +1,15 @@
 @import '../../gobalscss/global.scss';
-.card_container {
+.bestcart_container {
   @include flex(column, null, null, 10px);
   padding: 10px;
   background-color: white;
   color: black;
   margin: 20px;
   border-radius: 10px;
+  @include responsive(768px) {
+    margin: 10px;
+    padding: 5px;
+  }
 
   .card_image {
     img {
@@ -19,6 +23,9 @@
     @include flex(column, null, null, 10px);
     .star_section {
       @include flex(row, space-between, center, 10px);
+      @include responsive(1000px) {
+        @include flex(column, null, center, 5px);
+      }
       p {
         font-weight: 400;
         color: gray;
