--- a/frontend/src/components/cards/cartItems/cartItem.scss
+++ b/frontend/src/components/cards/cartItems/cartItem.scss
@@ -1,46 +1,52 @@
-.s2_left {
-  border: 1px solid rgb(231, 228, 228);
-  width: auto;
-  flex: 2;
-  border-radius: 15px;
-  padding: 10px;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  .s2_leftItem {
-    display: flex;
-    gap: 10px;
-    // border: 2px solid green;
-    justify-content: space-between;
-    .indiItem {
-      display: flex;
-      // border: 2px solid red;
-      img {
-        // border: 2px solid yellow;
-        padding: 5px;
-      }
-      .itemDesc {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        p {
-          font-size: 15px;
-        }
-      }
+@mixin respond-to($media) {
+  @if $media == 'phone' {
+    @media (max-width: 564px) {
+      @content;
     }
-    .itemButtons {
+  } @else if $media == 'tablet' {
+    @media (max-width: 768px) {
+      @content;
+    }
+  } @else if $media == 'desktop' {
+    @media (min-width: 1024px) {
+      @content;
+    }
+  }
+}
+.s2_leftItem {
+  display: flex;
+  gap: 10px;
+  @include respond-to('phone') {
+    flex-direction: column;
+  }
+  justify-content: space-between;
+  .indiItem {
+    display: flex;
+    @include respond-to('phone') {
+      flex-direction: column;
+    }
+    img {
+      padding: 5px;
+    }
+    .itemDesc {
       display: flex;
       flex-direction: column;
-      // border: 2px solid purple;
-      button {
-        color: red;
-        font-size: 30px;
-        text-align: right;
-        padding: 10px;
-        background-color: white;
-        border: none;
+      gap: 5px;
+      p {
+        font-size: 15px;
       }
+    }
+  }
+  .itemButtons {
+    display: flex;
+    flex-direction: column;
+    button {
+      color: red;
+      font-size: 30px;
+      text-align: right;
+      padding: 10px;
+      background-color: white;
+      border: none;
     }
   }
 }
